Bug fix to reduce file size